Theme switcher added

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 <body>
 <div class="wrapper">
+    <div class="change-theme-wrap">
+        <div class="change-theme change-theme-light change-theme-active">Светлая тема</div>
+        <div class="change-theme change-theme-dark">Темная тема</div>
+    </div>
     <form action="">
     <input type="text" class="number" placeholder="Введите одну цифру от 1 до 9" pattern="[0-9]">
 
-    <button type="button" class="btn" id="btn">Получить картинки (get some pictures)</button>
+    <button type="submit" class="btn" id="btn">Получить картинки (get some pictures)</button>
         <button type="button" class="btn" id="clear">Очистить</button>
     </form>
 </div>
 <hr>
 <div class="resultclass"></div>
-<script src="app.js"></script>
+<script src="miniapp.js"></script>
 </body>
 </html>
